--- a/GymAngel.Data/GymAngel.Data.csproj
+++ b/GymAngel.Data/GymAngel.Data.csproj
@@ -18,6 +18,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+	  <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.9" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.9" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="9.0.9" />
+
   </ItemGroup>
 
   <ItemGroup>
