--- a/GymAngel.Api/GymAngel.Api.csproj
+++ b/GymAngel.Api/GymAngel.Api.csproj
@@ -22,4 +22,10 @@
     <ProjectReference Include="..\GymAngel.Domain\GymAngel.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
