--- a/GymAngel.Data/GymAngel.Data.csproj
+++ b/GymAngel.Data/GymAngel.Data.csproj
@@ -28,4 +28,8 @@
     <ProjectReference Include="..\GymAngel.Domain\GymAngel.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
