--- a/GymAngel.Api/appsettings.json
+++ b/GymAngel.Api/appsettings.json
@@ -1,13 +1,19 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
 
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=GymAngel;User Id=sa;Password=12345;TrustServerCertificate=True;"
-  }
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=localhost;Database=GymAngel;User Id=sa;Password=12345;TrustServerCertificate=True;"
+    },
+    "Jwt": {
+        "Key": "API_tao_key_cho_JWT_ne_123456789",
+        "Issuer": "GymAngelAPI",
+        "Audience": "GymAngelUsers"
+    }
+
 }
