--- a/GymAngel.Api/appsettings.json
+++ b/GymAngel.Api/appsettings.json
@@ -14,6 +14,15 @@
         "Key": "API_tao_key_cho_JWT_ne_123456789",
         "Issuer": "GymAngelAPI",
         "Audience": "GymAngelUsers"
+    },
+    "Smtp": {
+        "Host": "smtp.gmail.com",
+        "Port": "587",
+        "User": "kiethcse182293@fpt.edu.vn",
+        "Pass": "lrxs mkpr bvks jwps",
+        "From": "kiethcse182293@fpt.edu.vn",
+        "UseSsl": "true"
     }
+
 
 }
