--- a/GymAngel.Business/GymAngel.Business.csproj
+++ b/GymAngel.Business/GymAngel.Business.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="4.14.0" />
+    <PackageReference Include="MimeKit" Version="4.14.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\GymAngel.Data\GymAngel.Data.csproj" />
     <ProjectReference Include="..\GymAngel.Domain\GymAngel.Domain.csproj" />
   </ItemGroup>
