API Regis Account

--- a/GymAngel.Api/appsettings.json
+++ b/GymAngel.Api/appsettings.json
@@ -22,7 +22,8 @@
         "Pass": "lrxs mkpr bvks jwps",
         "From": "kiethcse182293@fpt.edu.vn",
         "UseSsl": "true"
-    }
+    },
+    "ClientUrl": "http://localhost:4200"
 
 
 }
