--- a/GymAngel.Api/appsettings.json
+++ b/GymAngel.Api/appsettings.json
@@ -8,7 +8,7 @@
     "AllowedHosts": "*",
 
     "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost;Database=GymAngel;User Id=sa;Password=12345;TrustServerCertificate=True;"
+      "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=GymAngel;Trusted_Connection=True;TrustServerCertificate=True;"
     },
     "Jwt": {
         "Key": "API_tao_key_cho_JWT_ne_123456789",
