--- a/GymAngel.Business/GymAngel.Business.csproj
+++ b/GymAngel.Business/GymAngel.Business.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\GymAngel.Domain\GymAngel.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DTOs\AuthDTOs\" />
+  </ItemGroup>
+
 </Project>
